Xft: Fix a deadlock on display close

We can't call pango_xft_shutdown display while holding
the same lock it is taking.

https://bugzilla.gnome.org/show_bug.cgi?id=687470